--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,9 @@
     "jsdom": "^11.2.0",
     "lodash": "^4.17.4",
     "mocha": "^3.5.3",
-    "request": "^2.81.0"
+    "request": "^2.81.0",
+    "expect.js": "^0.3.1",
+    "module-alias": "^2.0.1"
   },
   "config": {
     "blanket": {
