Adding small routes that return data from UFRN's Open data.

--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "@core": "./core",
     "@crawler": "./crawler",
     "@root": ".",
+    "@api": "./api",
     "@test": "../tests_helper",
     "@models": "./models"
   },
